--- a/salao-web/src/main/resources/application.properties
+++ b/salao-web/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 #spring.jpa.properties.hibernate.generate_statistics=true
 #logging.level.org.hibernate.stat=debug
 
-spring.profiles.active=springdatajpa
+spring.profiles.active=jpa
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 logging.level.org.hibernate.type=traceue
